--- a/Biblio/app/src/main/res/layout/activity_gerer_livre.xml
+++ b/Biblio/app/src/main/res/layout/activity_gerer_livre.xml
@@ -40,7 +40,7 @@
         android:id="@+id/editeur"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/textEditeur" />
+        android:hint="Editeur" />
 
     <LinearLayout
         android:layout_width="fill_parent"
